--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;700&family=Source+Sans+3:wght@300;400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lexend', sans-serif;
+  @apply bg-gray-50 dark:bg-[#15171F];
+}
+
+#root {
+  @apply bg-gray-50 dark:bg-[#15171F];
 }
 
 .b {
-  @apply font-bold text-slate-800
+  @apply font-bold text-slate-800 dark:text-[#deddda];
+}
+
+div[contenteditable=true] {
+  font-family: 'Source Sans 3', sans-serif;
+  font-size: 18px;
 }
