--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,7 @@ div[contenteditable=true] {
 .popover-visible {
   display: block;
 }
+
+.icon > svg {
+  @apply text-slate-800 dark:text-slate-300;
+}
